src/App.css
.App {
  display: flex;
  column-gap: 2rem;
  flex-direction: row;
  height: 100vh; /* Use 100% of the viewport height */
  width: 100vw; /* Use 100% of the viewport width */
  overflow-x: hidden; /* Prevent horizontal overflow */
  overflow-y: hidden;
  position: relative;
}

h1,
h2,
h3,
.sidebar li {
  /* text-transform: uppercase; */
  line-height: 1;
  margin: 0;
  font-weight: 100;
}

h1 {
  font-size: 4rem;
  font-family: "owners", sans-serif;
  font-weight: 100;
  font-style: normal;
  margin: 0;

  color: white;
}

/* setting bg color for headings in project browser */
h2,
h3 {
  display: block;
  font-weight: 500;
}

h2 {
  text-transform: uppercase;
}

h2,
h3 {
  /* font-weight: 500; */
}

h3 {
  font-size: 1.3rem;
}

p {
  font-size: 1.3rem;
}

.project-body li {
  padding: 0.5rem;
  font-size: 1.3rem;
}

/* src/components/Sidebar.css */
.sidebar {
  width: 40%;
  margin: 3rem;
  justify-items: center;
  align-items: center;
  display: flex;
  transition: all 0.3s;
  overflow: hidden;
}

.sidebar h1,
a {
  font-weight: 100;
  text-transform: uppercase;
  color: rgb(51 51 51);
}

.sidebar h1 {
  transition: all 0.7s;
}

.sidebar h1:hover {
  background-color: black;
  scale: 1.01;
}

.sidebar h1 {
  background-color: rgb(51 51 51);
  color: rgb(235, 235, 235);
  font-weight: 500;
}

.sidebar ul {
  list-style-type: none;
  padding: 8px;
  margin: 2px;
}

.sidebar a {
  text-decoration: none;
  display: inline-block;
  padding: 10px 10px;
  border-radius: 6px;
  align-items: flex-start;
  align-content: flex-start;
  margin: 10px 0px;
  font-family: "owners", sans-serif;
  font-size: 2rem;
  font-style: normal;
  transition: all 0.1s;
  transform-origin: center;
}

.sidebar ul {
  transform-origin: center;
}

.sidebar a:hover {
  text-shadow: 3px -3px 8px rgba(0, 0, 0, 0.268);

  scale: 1.03;
}

.sidebar a:hover,
.nav-arrow:hover,
.resume-button:hover {
  color: rgba(0, 145, 255, 0.767);
}

.bike-icon {
  width: 400px;
  height: auto;
  visibility: hidden;
  fill: rgba(113, 130, 142, 0.624);
  z-index: -1;
}

.nav-arrow {
  transition: all 0.1s;
  transform-origin: center;
}

.sidebar a:active {
  /* font-size: 2.2rem; */
  scale: 1.05;
  color: rgb(0, 94, 255);
}

.nav-arrow:active {
  color: rgb(0, 94, 255);
  transform: scale(1.5, 1.2);
}

.interest-cloud {
  text-align: justify;
}

.content-body {
  margin: 3rem;
  flex: 1;

  font-family: "owners", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.portrait {
  display: block;
  width: 60%;
  object-fit: cover;
  height: auto;
  margin-bottom: 3%;
}

.padded-content,
.project-container {
  display: flex;
  flex: 1;
}

.padded-content {
  column-gap: 2rem;
  flex-direction: row;
  overflow-x: hidden; /* Prevent horizontal overflow */
  /* overflow-y: hidden; */
  /* margin-bottom: 3rem; */
}

strong {
  font-weight: 500;
}

.project-container {
  background-color: rgb(235, 235, 235);
  flex-direction: column;
  width: 100%;
  color: rgb(51, 51, 51);
  display: flex;
  transition: scale 0.3s, box-shadow 0.3s;
}

.project-body {
  display: flex;
  height: 100%;
}

.project-container .project-image {
  display: flex;
  width: 100%;
  height: 100%;
  scale: 0.8;
}

.project-heading {
  display: flex;
  background-color: rgb(51, 51, 51);
  color: rgb(235, 235, 235);
  height: auto;
  padding-block: 8px;
  flex-direction: column;
  justify-content: center;
}

.project-heading h2,
.project-heading h3 {
  margin: 3rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.project-container:hover {
  scale: 1.02;
  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
}

.project-nav {
  margin-bottom: 1%;
  color: rgb(235, 235, 235);
  display: flex;
  height: 6vh;
  justify-content: space-between;
  align-items: center;
  padding-inline: 5%;
  font-size: 2rem;
}

.project-nav h3 {
  font-weight: 100;
  text-transform: uppercase;
  font-size: 2rem;
}

.resume-button {
  display: flex;
  color: white;
  background-color: rgb(51 51 51);
  padding: 0.8rem;
  font-weight: 500;
  font-size: 1.1rem;
  justify-content: center;
  text-transform: uppercase;
  width: 30%;
  right: 0;
  transition: all 0.1s;
}

.resume-button:active {
  scale: 1.1 1.05;
}

/* this is for div's that are buttons */
.nav-arrow,
.resume-button {
  user-select: none;
  cursor: pointer;
}

.project-nav {
  background-color: rgb(51 51 51);
}

.demo-image-container {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.demo-image {
  height: auto;
  width: 16%;
  border: 2px solid black;
  border-radius: 10px;
}

.embed-container {
  display: flex;
  flex-wrap: wrap;
  gap: 16px;
}

.controller {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 300px;
  height: 50px;
  background-color: black;
}

.modal {
  position: fixed;
  height: 100vh;
  width: 100vw;
  top: 0px;
  left: 0px;
  background: white;
  background-color: rgba(82, 82, 82, 0.345);
  backdrop-filter: blur(8px);
  z-index: 1000; /* Ensure it is on top of other content */
  transition: all 0.5s;
  opacity: 0;
  display: flex;
  justify-content: center;
}

.modal:hover {
  opacity: 1;
}

.modal .responsive-image {
  display: flex;
  transform-origin: center;
  scale: 0.9;
  transition: all 0.3s;
}

.modal .project-image:hover {
  scale: 0.92;
}

.image-container {
  display: flex;
  justify-content: center; /* Center image horizontally */
  align-items: center; /* Center image vertically */
}

.responsive-image {
  max-width: 100%;
  max-height: 100%;
  width: auto; /* Maintain aspect ratio */
  height: auto; /* Maintain aspect ratio */
  transition: all 0.5s;
  user-select: none;
  cursor: pointer;
}

.project-media .image-container {
  padding-block: 1rem;
  padding-inline: 2rem;
}

.project-info {
  display: flex;
  flex-direction: column;
  margin: 3rem;
}

.project-media {
  display: flex;
  border-left: 0.05rem solid rgb(51, 51, 51);
  color: rgb(235, 235, 235);
  flex-direction: column;

  align-items: center;
  overflow-y: hidden;
  overflow-x: hidden;
  transition: all 0.5s;
}

.project-media .responsive-image:hover {
  border-radius: 8px;
  scale: 1.05;
}

.project-footer {
  display: flex;
  margin-top: auto;
  background-color: rgb(51 51 51);
  color: rgb(235, 235, 235);
}

.project-footer h2,
.project-footer h3,
.project-footer p {
  margin: 3rem;
  transition: all 0.5s;
}

.project-footer h2:hover {
  color: rgb(0, 119, 255);
  scale: 1.1;
}

.project-footer:hover {
  user-select: none;
  cursor: pointer;
}

